--- a/index.html
+++ b/index.html
@@ -254,13 +254,8 @@
                         </div>
                     </div>
                 </div>
-            </aside>
-        </main>
-
-        <!-- Bottom Section -->
-        <section class="bottom-section">
             <!-- Progress Stats -->
-            <div class="progress-stats">
+            <div class="progress-stats moved-progress-stats">
                 <h3>ВАША СТАТИСТИКА ПРОГРЕССА</h3>
                 <div class="stats-content">
                     <div class="chart-container">
@@ -284,6 +279,12 @@
                     </div>
                 </div>
             </div>
+            </aside>
+        </main>
+
+        <!-- Bottom Section -->
+        <section class="bottom-section">
+
 
             <!-- Top Games -->
             <div class="top-games">
