Revert "Apply neon effect to stat circles and move progress stats"
This reverts commit f11e70ac959c4a5ec14c1e92d83aaf88f09bcf65.

--- a/index.html
+++ b/index.html
@@ -254,8 +254,13 @@
                         </div>
                     </div>
                 </div>
+            </aside>
+        </main>
+
+        <!-- Bottom Section -->
+        <section class="bottom-section">
             <!-- Progress Stats -->
-            <div class="progress-stats moved-progress-stats">
+            <div class="progress-stats">
                 <h3>ВАША СТАТИСТИКА ПРОГРЕССА</h3>
                 <div class="stats-content">
                     <div class="chart-container">
@@ -279,12 +284,6 @@
                     </div>
                 </div>
             </div>
-            </aside>
-        </main>
-
-        <!-- Bottom Section -->
-        <section class="bottom-section">
-
 
             <!-- Top Games -->
             <div class="top-games">
