Rename 'Ваши Титаны' to 'Мои Задачи'

--- a/index.html
+++ b/index.html
@@ -1878,7 +1878,7 @@
                     </div>
                     
                     <div class="tasks-tabs">
-                        <div class="task-tab active">Ваши Титаны</div>
+                        <div class="task-tab active">Мои Задачи</div>
                         <div class="task-tab">Предлагаемые Планы</div>
                     </div>
                     
